--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="icon" href="img/pizza-icon.png">
+  <meta name="author">
+  <meta content="Dawg Pizza">
 	<title>'Dawg Pizza'</title>
 	
 </head>
