DAWG_PIZZA_HTML

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </section>
 
 
-	 <section class="Information">
+	 <section class="information">
 		  <h2>About Us</h2>
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
