--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	   <h2>Our Menu</h2>
 		  <h3>Meat Pies</h3>
 			 <dl>
-				  <dt>Bank &amp; Pineapple</dt>
+				  <dt>Bacon &amp; Pineapple</dt>
 					 <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
