fixed the header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	 <link rel="icon" href="img/pizza-icon.png">
    <meta name="author">
    <meta content="Dawg Pizza">
-   <title>'Dawg Pizza'</title>
+   <title>Dawg Pizza</title>
  </head>
 
   <body>
